Do some initial work on Akiwrapper 2.0.0
The project won't compile in its current state